flixed css, added image function to projects

--- a/spa/public/projects.json
+++ b/spa/public/projects.json
@@ -3,7 +3,7 @@
         "title": "React Customize SVG",
         "subtitle": "Props, State, Event Handling",
         "link" : "https://codepen.io/dannyhwangca/full/VwLOqya",
-        "image" : "image",
+        "image" : "project-svg.png",
         "description" : "A React project that uses value from an input to pass information between states & props to create changes to an SVG.",
         "type" : "Codepen"
     }
