--- a/spa/public/projects.json
+++ b/spa/public/projects.json
@@ -24,19 +24,11 @@
         "type" : "Codepen"
     },
     {
-        "title": "React Customize SVG",
-        "subtitle": "Props, State, Event Handling",
-        "link" : "https://codepen.io/dannyhwangca/full/VwLOqya",
-        "image" : "project-svg.png",
-        "description" : "A React project that uses value from an input to pass information between states & props to create changes to an SVG.",
-        "type" : "Codepen"
-    },
-    {
-        "title": "React Customize SVG",
-        "subtitle": "Props, State, Event Handling",
-        "link" : "https://codepen.io/dannyhwangca/full/VwLOqya",
-        "image" : "project-svg.png",
-        "description" : "A React project that uses value from an input to pass information between states & props to create changes to an SVG.",
+        "title": "Sliding Banners",
+        "subtitle": "GSAP, tweening",
+        "link" : "https://codepen.io/dannyhwangca/full/xLzzoq",
+        "image" : "project-gsap.png",
+        "description" : "Using GSAP & Tweenlite to create a sliding banner concept.",
         "type" : "Codepen"
     }
 ]
